force-app/main/default/objects/FieloEE__Event__c/FieloEE__Event__c.object-meta.xml
<CustomObject>
    <description>Actions that do not generate points performed by members.</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>