force-app/main/default/objects/FieloEE__Event__c/fields/FieloCH__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>To Process</fullName>
                <default>true</default>
                <label>To Process</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>