force-app/main/default/objects/FieloEE__Event__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <label>Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>