force-app/main/default/objects/FieloEE__Event__c/fields/FieloEE__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>